marked 1.0.8 8 Jan 2013
------------

NEW FEATURES

* added multi-state model with fixed effects using admb. This is done with new function mscjs and multistate.tpl. It required changes to create.dm,create.dmdf, crm, process.ch and process.data. It is functional but currently only returns admb object and will not work with other generic functions at present.


marked 1.0.7 14 Dec 2012)
------------

NEW FEATURES

* added use of admb and random effects for CJS. Controlled through arguments use.admb=TRUE and re=TRUE respectively. Doesn't currently work with predict.

BUG FIXES

* fixed problem in create.dmdf which was removing id field if fields (static) specified

* made change to cjs.f which was incorrectly fixed for loss on capture

* made changes to bayesCR.cpp to remove compilation warnings


marked 1.0.6 (5 Oct 2012)
------------
CHANGES

* removed autoscale feature which complicated code and was not very effective

* Removed simulation code and put in a separate package - simcr.

* restructured the model object that is returned from crm

NEW FEATURES

* Function load.model will return externally stored model. Most useful with crm.wrapper and external=TRUE 

* Generic function predict will provide estimates of real parameters and optionally std errors, conf intervals and vcv matrix for the existing or newdata. Does not handle fixed parameters at present.

* crm.wrapper now returns a list like mark.wrapper in RMark with a model.table.  The model list elements are the filenames of the externally saved model results. A default print method is included to print out model selection table. Also, an external argument was added.

* Modified cjs.initial to use either logit or probit and added initial value calculation to probitCJS 

* Allows initial=value and all parameters given that initial value
